# moomoot

./: .travis.yml  Cargo.toml  LICENSE  README.md  archi.md
examples/: random-strings.rs
src/: base.rs  instrument.rs  lib.rs  looper.rs  main.rs  param_expression.rs  params.rs  traits.rs
src/efx/: mod.rs  pan.rs  volume.rs
src/synth/: builder.rs  mod.rs  noise.rs  sine.rs  string.rs
src/tree/: bus.rs  mixer.rs  mmtree.rs  mod.rs  tests.rs
src/tree/pbus/: bus.rs  mod.rs  sender.rs
src/utils/: ringbuffer.rs
