[package]
name = "moomoot"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Florent D'halluin <flal@melix.net>"]
description = "modular sound synthesizer"
repository = "https://github.com/flo-dhalluin/moomoot"

[dependencies]
jack = "0.5.0"
libc = "0.2.0"
rand = "0.3"
nom = "3.2.1"
# rosc = "~0.1"
# matches="0.1"
uuid = {version = "0.4", features = ["v4"]}

[profile.bench]
debug=false
